--- a/html/sfe/css/output/patterns/06-pagination.css
+++ b/html/sfe/css/output/patterns/06-pagination.css
@@ -55,7 +55,7 @@ ol.pagination li {
   color: #ffffff; }
   .pagination a:hover {
     text-decoration: underline;
-    background-color: #6381BF; }
+    background-color: #8F4D97; }
 
 .pagination__current a {
   background-color: #5CC1D4;
