--- a/html/sfe/css/output/patterns/15-callouts.css
+++ b/html/sfe/css/output/patterns/15-callouts.css
@@ -31,7 +31,7 @@
   font-size: 1.3em;
   margin-bottom: 1.5em;
   padding: 1em 5% 1em 5%;
-  border-bottom: 0.2em solid #0F72B8;
+  border-bottom: 0.2em solid #0e6caf;
   font-style: italic;
   line-height: 1.4em;
   background-position: center center;
@@ -39,13 +39,13 @@
 
 .callout--warning {
   color: #ffffff;
-  background-color: #0F72B8;
-  border-color: #0e67a6; }
+  background-color: #0e6caf;
+  border-color: #0d619d; }
 
 .callout--tip {
   color: #ffffff;
-  background-color: #6381BF;
-  border-color: #4e70b7; }
+  background-color: #8F4D97;
+  border-color: #814588; }
 
 @media only all and (min-width: 41em) {
   .callout {
