--- a/html/sfe/css/output/patterns/03-blockquote.css
+++ b/html/sfe/css/output/patterns/03-blockquote.css
@@ -67,7 +67,7 @@ blockquote.quote__blockquote {
 .quote--pullout {
   margin: 1.5em 0;
   border-left: 0.276em solid;
-  border-color: #6381BF;
+  border-color: #8F4D97;
   padding: 0.3em 1em 0.2em 1em;
   font-style: normal;
   font-weight: 600;
