Typography colour adjustments

--- a/html/sfe/css/output/global.css
+++ b/html/sfe/css/output/global.css
@@ -485,7 +485,7 @@ body, .wf-loading body, .wf-inactive body {
   line-height: 1.2em; }
 
 .heading--mid {
-  color: #98D7E2; }
+  color: #30a2b7; }
 
 .heading--pairing {
   margin: 0 0 0.15em 0; }
