Favicons, responsive tables, feedback colouring

--- a/html/sfe/css/output/global.css
+++ b/html/sfe/css/output/global.css
@@ -3497,7 +3497,7 @@ select:-internal-list-box option:checked {
 
 .feedback {
   background-color: #deeff2;
-  border-bottom: 0.2em solid #abd7df;
+  border-bottom: 0.2em solid #cde7ec;
   font-weight: 500;
   padding: 0.8em 1.4em;
   margin: 0 0 1.5em 0; }
@@ -3533,7 +3533,7 @@ select:-internal-list-box option:checked {
 
 .feedback--error {
   background-color: #FFF3B3;
-  border-bottom: 0.2em solid #ffef9a; }
+  border-bottom: 0.2em solid #ffeb80; }
 
 html\:abbr, abbr {
   border-bottom: 0.1em dotted;
@@ -3621,9 +3621,9 @@ tr {
   margin: 0 0 1.5em 0;
   width: 100%;
   font-size: 1.1em;
-  background-color: #efe3f1;
+  background-color: #e9f3f5;
   border-top: 0.2em solid #2D3030;
-  border-bottom: 0.2em solid #d5b4d9;
+  border-bottom: 0.2em solid #cce4e8;
   padding: 1em; }
 
 td {
@@ -3641,7 +3641,7 @@ by side rather than stacked */
     margin: 0 0 2em 0;
     border-style: none;
     border-top-width: 0;
-    border-bottom: 0.2em solid #d5b4d9; }
+    border-bottom: 0.2em solid #c8dfe2; }
   /* Labeling
    * Hide the mobile labels */
   th[data-title]:before, td[data-title]:before {
