--- a/html/sfe/css/output/patterns/08-feedback.css
+++ b/html/sfe/css/output/patterns/08-feedback.css
@@ -29,7 +29,7 @@
 
 .feedback {
   background-color: #deeff2;
-  border-bottom: 0.2em solid #abd7df;
+  border-bottom: 0.2em solid #cde7ec;
   font-weight: 500;
   padding: 0.8em 1.4em;
   margin: 0 0 1.5em 0; }
