--- a/html/sfe/css/output/patterns/09-feedback-error.css
+++ b/html/sfe/css/output/patterns/09-feedback-error.css
@@ -29,6 +29,6 @@
 
 .feedback--error {
   background-color: #FFF3B3;
-  border-bottom: 0.2em solid #ffef9a; }
+  border-bottom: 0.2em solid #ffeb80; }
 
 /*# sourceMappingURL=09-feedback-error.css.map */
