--- a/html/sfe/css/output/global.css
+++ b/html/sfe/css/output/global.css
@@ -3386,7 +3386,7 @@ textarea {
   margin-bottom: 1em; }
 
 input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[list]:focus, textarea:focus, select:focus {
-  border: 0.2em solid #bcdfe6;
+  border: 0.2em solid #b57cbc;
   outline: 0; }
 
 label, legend {
