--- a/html/sfe/css/sass/patterns/07-form-fields.scss
+++ b/html/sfe/css/sass/patterns/07-form-fields.scss
@@ -143,7 +143,7 @@ input[type="password"]:focus,
 input[list]:focus,
 textarea:focus,
 select:focus {
-  border: 0.2em solid $light-pastel;
+  border: 0.2em solid scale-color($contrast-alt, $lightness: 30%);
   outline: 0; 
 }
 
