--- a/html/sfe/css/sass/patterns/06-tab-ui.scss
+++ b/html/sfe/css/sass/patterns/06-tab-ui.scss
@@ -95,7 +95,7 @@
   }
   
   .js-tabs .tabs [role=tablist] {
-		background-color: scale-color($contrast-alt, $lightness: 40%);
+		background-color: scale-color($light-pastel, $lightness: 40%);
 	}
 
   .js-tabs .tabs [role=tab] {
