--- a/html/sfe/css/output/patterns/06-pagination.css
+++ b/html/sfe/css/output/patterns/06-pagination.css
@@ -55,17 +55,17 @@ ol.pagination li {
   color: #ffffff; }
   .pagination a:hover {
     text-decoration: underline;
-    background-color: #8F4D97; }
+    background-color: #5CC1D4; }
 
 .pagination__current a {
-  background-color: #5CC1D4;
+  background-color: #8F4D97;
   color: #ffffff;
   cursor: not-allowed;
   border: none; }
   .pagination__current a:hover {
     text-decoration: underline;
     color: #ffffff;
-    background-color: #5CC1D4; }
+    background-color: #a660ae; }
 
 .pagination__previous a, .pagination__next a {
   background-color: #2D3030;
