Items List pattern

--- a/html/sfe/css/output/patterns/06-list-of-items.css
+++ b/html/sfe/css/output/patterns/06-list-of-items.css
@@ -33,7 +33,7 @@
 
 .items--block {
   padding: 1.5em 1.5em 1em 1.5em;
-  background-color: #efe3f1; }
+  background-color: #deeff2; }
 
 .items .heading__smallest {
   margin: 0 0 0.6em 0; }
