--- a/html/sfe/css/output/global.css
+++ b/html/sfe/css/output/global.css
@@ -2948,7 +2948,7 @@ ol ul li:before {
 
 .items--block {
   padding: 1.5em 1.5em 1em 1.5em;
-  background-color: #efe3f1; }
+  background-color: #deeff2; }
 
 .items .heading__smallest {
   margin: 0 0 0.6em 0; }
