Content Indexes Pattern

--- a/html/sfe/css/output/global.css
+++ b/html/sfe/css/output/global.css
@@ -2827,11 +2827,11 @@ ol ul li:before {
     color: #ffffff;
     font-weight: 3 00; }
   .list__jump-nav li a:hover {
-    background-color: #36aaca; }
+    background-color: #32a0be; }
   .list__jump-nav li:nth-child(2n) a {
-    background-color: #5CC1D4; }
+    background-color: #33aac0; }
   .list__jump-nav li:nth-child(2n) a:hover {
-    background-color: #70c8d9; }
+    background-color: #44b8ce; }
   .list__jump-nav li:before {
     content: none;
     counter-increment: none; }
@@ -2847,7 +2847,7 @@ ol ul li:before {
 
 .list__content .heading span {
   font-weight: 300;
-  color: #eef7f9;
+  color: #5CC1D4;
   display: inline-block;
   margin: 0 0.5em 0 0.2em; }
 
@@ -2856,6 +2856,9 @@ ol ul li:before {
   font-weight: 300;
   font-style: italic;
   color: #437F8F; }
+  .list__content__back-to-top:hover {
+    border-bottom: 0.08em solid #a057a9;
+    color: #a057a9; }
 
 .list__content ol {
   list-style: none;
@@ -2871,6 +2874,9 @@ ol ul li:before {
   display: inline;
   margin: 0 0.2em 0 0;
   font-weight: 400; }
+  .list__content .list__content__item a:hover {
+    color: #288098;
+    border-bottom: 0.08em solid #288098; }
 
 .list__content .list__content__item span {
   display: block;
