--- a/html/sfe/css/sass/patterns/03-blockquote.scss
+++ b/html/sfe/css/sass/patterns/03-blockquote.scss
@@ -5,12 +5,12 @@
 	margin: 1.5em 0;
 	border-top: 0.08em solid;
 	border-bottom: 0.08em solid;
-  border-color: scale-color($mid, $lightness: 30%);
+  border-color: $light;
 	padding: 1em 0 1em 0;
 	font-style: italic;
 	font-size: 1.4em;
 	line-height: 1.3em;
-	color: $mid-text;
+	color: $contrast-alt;
 	max-width: 27em;
 }
 
@@ -54,13 +54,13 @@ blockquote.quote__blockquote {
 .quote--pullout {
 	margin: 1.5em 0;
 	border-left: 0.276em solid;
-  border-color: $contrast-alt;
+  border-color: $contrast-alt-light;
 	padding: 0.3em 1em 0.2em 1em;
 	font-style: normal;
 	font-weight: 600;
 	font-size: 1.7em;
 	line-height: 1.3em;
-	color: $mid-bright;
+	color: $mid-text;
 }
 
 blockquote.quote__blockquote {
@@ -79,7 +79,7 @@ blockquote.quote__blockquote {
     font-size: 1.6em;
     vertical-align: -0.2em;
     margin-left: -0.1em;
-    color: $mid;
+    color: $contrast-alt-light;
   }
 }
 
@@ -95,6 +95,9 @@ blockquote.quote__blockquote {
   margin-top: 0.8em;
   &:before {
     content: "— ";
+  }
+  a {
+	  border-bottom: 0.08em dotted $link-text;
   }
 }
 
