--- a/html/sfe/css/output/patterns/02-calls-to-action.css
+++ b/html/sfe/css/output/patterns/02-calls-to-action.css
@@ -91,7 +91,9 @@
     border-left: none; }
 
 .cta.icon-pattern {
-  border-color: #98D7E2; }
+  border-color: #288098; }
+  .cta.icon-pattern span {
+    color: #288098; }
 
 .cta--no-circle div {
   display: none; }
@@ -102,8 +104,11 @@
   .cta--block span {
     font-weight: 600; }
 
-.cta--block.icon-pattern p {
+.cta--block p {
   color: #ffffff; }
+
+.cta--block.icon-pattern p {
+  color: #437F8F; }
 
 .cta--lockable {
   width: auto;
@@ -140,7 +145,7 @@
   .cta span {
     width: 80%;
     float: left;
-    padding: 0; }
+    padding: 0.45em 0 0.45em 0; }
   .cta div {
     width: 20%;
     float: right;
@@ -176,7 +181,7 @@
   .cta {
     padding: 0.6em 0.8em 0.6em 0.8em; }
   .cta span {
-    font-size: 1.3em;
+    font-size: 1.4em;
     padding: 0.4em 0 0 0; }
   .cta.cta--lockable span {
     padding: 0; }
