--- a/html/sfe/assets-icons/output/icons.fallback.css
+++ b/html/sfe/assets-icons/output/icons.fallback.css
@@ -38,5 +38,7 @@
 
 .icon-search { background-image: url('png/search.png'); background-repeat: no-repeat; }
 
+.icon-sfe-logo { background-image: url('png/sfe-logo.png'); background-repeat: no-repeat; }
+
 .icon-ss-logo { background-image: url('png/ss-logo.png'); background-repeat: no-repeat; }
 
