--- a/html/sfe/css/output/patterns/0-header.css
+++ b/html/sfe/css/output/patterns/0-header.css
@@ -28,7 +28,7 @@
   background-color: #bcdfe6; }
 
 .header {
-  background-color: #2D3030;
+  background-color: #ffffff;
   width: 100%;
   margin: 0;
   text-align: center; }
@@ -41,7 +41,7 @@
   background-position: left top; }
   .header__part--brand a {
     border-bottom: none; }
-  .header__part--brand .icon-mie-logo {
+  .header__part--brand .icon-sfe-logo {
     margin: 1.75em 8% 0.75em 8%;
     width: 84%;
     height: 7.375em;
@@ -60,7 +60,7 @@
   .header__search-trigger .icon-close, .nav__trigger .icon-close {
     width: 1.25em;
     height: 1.3125em;
-    margin: 1.03125em 0.85em 1.03125em 0;
+    margin: 0.95em 0.85em 0.8em 0;
     float: left; }
 
 .js .header__search-trigger, .js .nav__trigger {
@@ -73,14 +73,14 @@
   cursor: pointer;
   border-bottom: 0.3em solid #1c5a6a; }
   .header__search-trigger .icon-search {
-    width: 1.6875em;
-    height: 1.75em;
-    margin: 0.8125em 0.6em 0.8125em 0;
+    width: 1.4em;
+    height: 1.5em;
+    margin: 0.8125em 0.7em 0.8125em 0;
     float: left; }
   .header__search-trigger span {
-    font-size: 1.3em;
+    font-size: 1.1em;
     font-weight: 400;
-    margin: 0.7em 0 0 0;
+    margin: 0.75em 0 0 0;
     color: #ffffff;
     float: left; }
   .header__search-trigger.active {
@@ -113,11 +113,11 @@
     font-weight: 600; }
   .header__part--search input[type="text"] {
     font-size: 1.1em;
-    border: 0.135em solid #98D7E2;
+    border: 0.135em solid #288098;
     padding: 0.36em;
     height: 2.1375em; }
     .header__part--search input[type="text"]:focus {
-      border: 0.135em solid #bcdfe6; }
+      border: 0.135em solid #5CC1D4; }
   .header__part--search input[type="text"], .header__part--search input[type="submit"] {
     width: 100%;
     margin: 0; }
@@ -126,17 +126,16 @@
     display: inline-block;
     float: left; }
   .header__part--search input[type="submit"] {
-    color: #2D3030;
-    background-color: #98D7E2;
+    color: #ffffff;
+    background-color: #288098;
     font-size: 1.1em;
     outline: 0;
-    border: 0.135em solid #98D7E2;
+    border: 0.135em solid #288098;
     max-width: 4.55625em;
     height: 2.14em; }
     .header__part--search input[type="submit"]:focus, .header__part--search input[type="submit"]:hover {
-      background-color: #bcdfe6;
-      border: 0.135em solid #bcdfe6;
-      color: #288098; }
+      background-color: #8F4D97;
+      border: 0.135em solid #8F4D97; }
   .header__part--search .search__advanced {
     display: inline-block;
     font-size: 1em;
@@ -144,11 +143,12 @@
     padding-top: 0.5em;
     margin: 0 auto; }
     .header__part--search .search__advanced a {
-      border-color: #ffffff;
-      color: #ffffff; }
+      border-color: #2D3030;
+      color: #2D3030;
+      border-bottom: 0.08em dotted #2D3030; }
     .header__part--search .search__advanced a:focus, .header__part--search .search__advanced a:hover {
-      color: #bcdfe6;
-      border-bottom: 0.1em dotted #98D7E2; }
+      color: #a057a9;
+      border-bottom: 0.08em dotted #a057a9; }
   .header__part--search .form-item, .header__part--search .form-actions {
     margin: 0; }
 
