--- a/html/sfe/css/sass/patterns/0-header.scss
+++ b/html/sfe/css/sass/patterns/0-header.scss
@@ -5,7 +5,7 @@
 // sections, then enhanced via media query
 
 .header {
-  background-color: $dark;
+  background-color: $white;
   width: 100%;
   margin: 0;
   text-align: center;
@@ -19,7 +19,7 @@
 .header__part--brand {
   background-position: left top;
   a {border-bottom: none;}
-  .icon-mie-logo {
+  .icon-sfe-logo {
     margin: 1.75em 8% 0.75em 8%;
     width: 84%;
     height: 7.375em;
@@ -45,7 +45,7 @@
   .icon-close {
     width: 1.25em;
     height: 1.3125em;
-    margin: 1.03125em 0.85em 1.03125em 0;
+    margin: 0.95em 0.85em 0.8em 0;
     float: left;
   }
 }
@@ -62,15 +62,15 @@
   cursor: pointer;
   border-bottom: 0.3em solid scale-color($mid, $lightness: -30%);
   .icon-search {
-    width: 1.6875em;
-    height: 1.75em;
-    margin: 0.8125em 0.6em 0.8125em 0;
+    width: 1.4em;
+    height: 1.5em;
+    margin: 0.8125em 0.7em 0.8125em 0;
     float: left;
   }
   span {
-    font-size: 1.3em;
+    font-size: 1.1em;
     font-weight: 400;
-    margin: 0.7em 0 0 0;
+    margin: 0.75em 0 0 0;
     color: $white;
     float: left;
   }
@@ -110,11 +110,11 @@
   }
   input[type="text"] {
    font-size: 1.1em;
-   border: 0.135em solid $light; 
+   border: 0.135em solid $mid; 
    padding: 0.36em;
    height: 2.1375em;
    &:focus {
-     border: 0.135em solid $light-pastel;
+     border: 0.135em solid $mid-bright;
    }
   }
   input[type="text"],
@@ -128,18 +128,17 @@
     float: left;
   }
   input[type="submit"] {
-    color: $dark-text;
-    background-color: $light;
+    color: $white;
+    background-color: $mid;
     font-size: 1.1em;
     outline: 0;
-    border: 0.135em solid $light;
+    border: 0.135em solid $mid;
     max-width: 4.55625em;
     height: 2.14em;
     &:focus,
     &:hover {
-      background-color: $light-pastel;
-      border: 0.135em solid $light-pastel;
-      color: $mid;
+      background-color: $contrast-alt;
+      border: 0.135em solid $contrast-alt;
     }
   }
   .search__advanced {
@@ -149,13 +148,14 @@
     padding-top: 0.5em;
     margin: 0 auto;
     a {
-	    border-color: $white;
-	    color: $white;
+	    border-color: $dark-text;
+	    color: $dark-text;
+	    border-bottom: 0.08em dotted $dark-text;
 	  }
     a:focus,
     a:hover {
-      color: $light-pastel;
-      border-bottom: 0.1em dotted $light;
+      color: $link-text;
+      border-bottom: 0.08em dotted $link-text;
     }
   }
   // Fix / Hide Drupal junk *sigh*
